--- a/.github/workflows/sanatize-commit.yaml
+++ b/.github/workflows/sanatize-commit.yaml
@@ -13,10 +13,8 @@ jobs:
       - name: Check for correct naming scheme
         id: checkNaming
         shell: pwsh
-        env:
-          event: ${{ github.event }}
         run: |
-          Write-Output $Env:event
+          Write-Output $Env:Event
           $CommitMessage = git log --format=%B -n 1 HEAD
           if ( $CommitMessage -match '^doc:(\s|\S)*$') {
             Write-Output "::notice::The latest commit indicates a documentation change. Merging this pull-request will not alter the version number."
@@ -34,3 +32,5 @@ jobs:
             Write-Output "::error title=Naming-Convention-Error::The commit message did not follow the agreed upon naming convention, the name of the latest commit was: $CommitMessage"
             exit 1
           }
+        env:
+          Event: ${{ secrets.GITHUB_TOKEN }}
