--- a/.github/workflows/sanatize-commit.yaml
+++ b/.github/workflows/sanatize-commit.yaml
@@ -15,4 +15,6 @@ jobs:
         shell: pwsh
         env:
           trigger: ${{ github.ref_name }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          prUrl: ${{ github.event.pr.html_url }}
         run: .github/workflows/scripts/sanitize-commit/sanitize-commit.ps1
