--- a/.github/workflows/sanatize-commit.yaml
+++ b/.github/workflows/sanatize-commit.yaml
@@ -16,5 +16,5 @@ jobs:
         env:
           trigger: ${{ github.ref_name }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          prUrl: ${{ github.event.pr.html_url }}
+          prUrl: ${{ github.event.pull_request }}
         run: .github/workflows/scripts/sanitize-commit/sanitize-commit.ps1
