doc: Ny sanitizer test nr 5

--- a/.github/workflows/sanatize-commit.yaml
+++ b/.github/workflows/sanatize-commit.yaml
@@ -13,5 +13,5 @@ jobs:
         env:
           trigger: ${{ github.ref_name }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          prUrl: ${{ github.event.pull_request }}
+          prUrl: ${{ github.ref }}
         run: .github/workflows/scripts/sanitize-commit/sanitize-commit.ps1
