--- a/.github/workflows/sanatize-commit.yaml
+++ b/.github/workflows/sanatize-commit.yaml
@@ -15,6 +15,7 @@ jobs:
         shell: pwsh
         run: .github/workflows/scripts/sanitize-commit/sanitize-commit.ps1
         env:
-          trigger: ${{ github.ref_name }}
+          gitHubHost: ${{ github.server_url}}
+          repoPath: ${{ github.repository }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          prUrl: ${{ github.ref }}
+          prPath: ${{ github.ref }}
