--- a/.github/workflows/sanatize-commit.yaml
+++ b/.github/workflows/sanatize-commit.yaml
@@ -7,11 +7,26 @@ jobs:
     name: Check commit message
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # Checks what kind of release this is based on the commit message, doc changes does not trigger a new release
+      # We can assume that the commit message follows the naming conventions here because they have been sanitized during the PR
+      - name: Check release type
+        id: releaseType
+        run: .github/workflows/scripts/shared/determineReleaseType.ps1
+        shell: pwsh
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          repoPath: ${{ github.repository }}
+          gitHubHost: ${{ github.server_url }}
+          commit: ${{ github.event.commits }}
+
       - name: Check for correct naming scheme
         id: checkNaming
         shell: pwsh
         env:
-          trigger: ${{ github.ref_name }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          prUrl: ${{ github.ref }}
+          releaseType: ${{ steps.releaseType.outputs.releaseType }}
+
         run: .github/workflows/scripts/sanitize-commit/sanitize-commit.ps1
